Added a bootstrapping program for performing timing analyses on individual tasks.  Seth Proctor knows the details on this class.
See TaskTimerApplication for details.

Note: this package won't compile until the DistributedHashMap class is
actually added.

Details.

A    analysis
A    analysis/src
A    analysis/src/com
A    analysis/src/com/sun
A    analysis/src/com/sun/sgs
A    analysis/src/com/sun/sgs/analysis

  - Added new top-level directory for analysis code.

A    analysis/System.properties

  - Added system properties for booting the analysis application

A    analysis/AnalysisApplication.properties

  - Added analysis application properties.  *This is the file where
    the tasks apre specified that need to be tested*  

A    analysis/src/com/sun/sgs/analysis/tasks

  - Added package for tasks that are timing tests

A    analysis/src/com/sun/sgs/analysis/tasks/PrecompileMapOperationsAndThenTest.java

  - Added task for compiling map operations and then enqueueing the
    MapComparison task

A    analysis/src/com/sun/sgs/analysis/tasks/MapComparisonTask.java

  - Added task for enqueueing several DistributedHashMapPut tasks for
    timing.

A    analysis/src/com/sun/sgs/analysis/tasks/DistributedHashMapPut.java

  - Added task that does a single put operation on a map.

A    analysis/src/com/sun/sgs/analysis/TaskTimerApplication.java

  - Added boostrapping application for loading tasks 

A    analysis/data

  - Added a directory for where analysis data gets generated

A    src/server/j2se/com/sun/sgs/impl/profile/listener/TaskRuntimeGraphOutputListener.java

  - Added a new listener that records successful tasks, their count and the time they took to a file in analysis/data.

M    build.xml

  - Added a build targets for compiling and running the analysis code.
    See: ant analysis